# ManagementSystemOfSupermarketInventory

./: CMakeLists.txt
doc/: 超市管理系统第一次分工.md
src/: CMakeLists.txt  CmakeLists.txt  config.h  dataReadingAndStorage.c  dataReadingAndStorage.h  inventoryManagement.c  inventoryManagement.h  logInSystem.c  logInSystem.h  main.c  main.cpp  mainMenu.c  mainMenu.h  productInformationManagement.c  productInformationManagement.h  userPasswordManagement.c  userPasswordManagement.h
src/dataReadingAndStorage/: CMakeLists.txt  dataReadingAndStorage.c  dataReadingAndStorage.cpp  dataReadingAndStorage.h
src/inventoryManagement/: CMakeLists.txt  inventoryManagement.cpp  inventoryManagement.h
src/logInSystem/: CMakeLists.txt  logInSystem.c  logInSystem.cpp  logInSystem.h
src/mainMenu/: CMakeLists.txt  mainMenu.c  mainMenu.cpp  mainMenu.h
src/permissionDegree/: CMakeLists.txt  permissionDegree.c  permissionDegree.cpp  permissionDegree.h
src/productInformationManagement/: CMakeLists.txt  productInformationManagement.c  productInformationManagement.cpp  productInformationManagement.h
src/userPasswordManagement/: CMakeLists.txt  userPasswordManagement.c  userPasswordManagement.cpp  userPasswordManagement.h
